--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -28,11 +28,9 @@
   <div class="row">
     <div class="col-sm-8">
       <app-user-profile></app-user-profile>
-      <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-8 mt-3">
           <router-outlet></router-outlet>
         </div>
-      </div>
     </div>
     <div class="col-sm-4">
       <app-users></app-users>
