--- a/src/app/modules/home/users/users.component.html
+++ b/src/app/modules/home/users/users.component.html
@@ -3,5 +3,5 @@
     <span>
       <img [src]="user.image" class="img-responsive" style="width: 50px; height: 50px"/>
     </span>
-    {{user.name + " " + user.lastname + " " + user.id}}</li>
+    {{ user.name + " " + user.lastname }}</li>
 </ul>
