--- a/src/app/modules/shared/components/alert/alert.component.scss
+++ b/src/app/modules/shared/components/alert/alert.component.scss
@@ -1,6 +1,6 @@
-.display-center {
+.display-top {
   position: absolute;
-  top: 90%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
