--- a/src/app/modules/home/user-profile/user-info/user-info.component.html
+++ b/src/app/modules/home/user-profile/user-info/user-info.component.html
@@ -1,4 +1,4 @@
-<h5 class="mb-5 text-center">{{userInfo.name +" "+ userInfo.lastname}}</h5>
+<h5 class="mb-5 text-center">{{userInfo?.name +" "+ userInfo?.lastname}}</h5>
 <div class="row">
   <div class="col-6 text-center" >
     <div class="avatar-container">
@@ -14,23 +14,23 @@
   <div class="col-6">
     <h6>{{'Про себе' | translate}}</h6>
     <p>
-      {{userInfo.description}}
+      {{userInfoForm?.description}}
     </p>
     <h6>{{'Електронна пошта' | translate}}</h6>
     <p>
-      {{userInfo.email}}
+      {{userInfo?.email}}
     </p>
     <h6>{{'Країна' | translate}}</h6>
     <p>
-      {{userInfo.country}}
+      {{userInfo?.country}}
     </p>
     <h6>{{'Місто' | translate}}</h6>
     <p>
-      {{userInfo.city}}
+      {{userInfo?.city}}
     </p>
     <h6>{{'Вік' | translate}}</h6>
     <p>
-      {{userInfo.age}}
+      {{userInfo?.age}}
     </p>
   </div>
 </div>
