fix error then users loaded first time

--- a/src/app/modules/home/users/users.component.html
+++ b/src/app/modules/home/users/users.component.html
@@ -5,7 +5,9 @@
     </span>
     {{ user.name + " " + user.lastname }}</li>
 </ul>
+
 <app-pagination
+  *ngIf="usersLoaded"
   [setPagination]="{
         'itemsCount': totalUsersAmount,
         'pageSize': 10
