--- a/src/app/modules/home/user-profile/edit-profile/edit-profile.component.html
+++ b/src/app/modules/home/user-profile/edit-profile/edit-profile.component.html
@@ -4,7 +4,7 @@
       <div class="col-sm-9">
         <label for="exampleInputFirstName">{{'Ім\'я' | translate}}</label>
         <input type="text" class="form-control" id="exampleInputFirstName" placeholder="{{'Ім\'я' | translate}}"
-               formControlName="name" [ngModel]="userInfo.name">
+               formControlName="name" [ngModel]="userInfo?.name">
       </div>
       <div class="col-sm-3 d-flex align-items-center" *ngIf="userInfoForm.get('name').invalid && userInfoForm.get('name').touched">
         <small class="text-danger">
