--- a/src/app/modules/home/users/users.component.html
+++ b/src/app/modules/home/users/users.component.html
@@ -1,9 +1,9 @@
 <ul class="list-group">
   <li *ngFor="let user of users" class="list-group-item list-group-item-action" style="cursor: pointer" [routerLink]="['/users', user.id]">
     <span>
-      <img [src]="user.image" class="img-responsive" style="width: 50px; height: 50px"/>
+      <img [src]="user?.image" class="img-responsive" style="width: 50px; height: 50px"/>
     </span>
-    {{ user.name + " " + user.lastname }}</li>
+    {{ user?.name + " " + user?.lastname }}</li>
 </ul>
 
 <app-pagination
