--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -33,11 +33,19 @@
         </div>
       </mat-card-content>
       <button mat-stroked-button color="accent" class="btn-block">{{'Ввійти' | translate}}</button>
-      <div class="d-flex justify-content-center mt-2">
-        <button (click) = "signInWithFacebook()" type="button" class="flex-grow-1" mat-flat-button color="primary">Sign In With Facebook</button>
-      </div>
 
     </form>
+    <div class="d-flex justify-content-center mt-2 flex-wrap">
+      <button class="loginBtn loginBtn--facebook" (click)="signInWithFB()">
+        Login with Facebook
+      </button>
+      <button class="loginBtn loginBtn--google mt-2" (click)="signInWithGoogle()">
+        Login with Google
+      </button>
+      <!--<button  type="button" mdbBtn color="fb" class="waves-light" mdbWavesEffect><i class="fab fa-facebook-f left"></i>Facebook</button>-->
+
+      <!--<button  type="button" class="flex-grow-1" mat-flat-button color="primary">Sign In With Facebook</button>-->
+    </div>
     <div class="etc-login-form">
       <p>forgot your password? <a [routerLink]="['/forgot-password']">click here</a></p>
       <p>new user? <a [routerLink]="['/registration']">create new account</a></p>
