add route for post

--- a/src/app/modules/home/user-profile/edit-profile/edit-profile.component.html
+++ b/src/app/modules/home/user-profile/edit-profile/edit-profile.component.html
@@ -55,7 +55,7 @@
     <div class="form-group row">
       <div class="col-sm-9">
         <label for="exampleInputAge">{{'Вік' | translate}}</label>
-        <input type="text" class="form-control" id="exampleInputAge" placeholder="{{'Вік' | translate}}" formControlName="age"
+        <input type="number" class="form-control" id="exampleInputAge" placeholder="{{'Вік' | translate}}" formControlName="age"
                [ngModel]="userInfo.age">
       </div>
 
