--- a/src/app/modules/home/user-profile/user-profile.component.html
+++ b/src/app/modules/home/user-profile/user-profile.component.html
@@ -15,6 +15,13 @@
       routerLinkActive="active">
     <a [routerLink]="['/users/me/edit']" class="nav-link">Edit information</a>
   </li>
+  <li role="presentation"
+      class="nav-item"
+      routerLinkActive="active">
+    <a [routerLink]="['/users/me/posts']" class="nav-link">My posts</a>
+  </li>
 </ul>
+
+
 
 
