--- a/src/app/modules/home/user-profile/user-info/user-info.component.html
+++ b/src/app/modules/home/user-profile/user-info/user-info.component.html
@@ -15,7 +15,7 @@
     <div class="col-6">
       <h6>{{'Про себе' | translate}}</h6>
       <p>
-        {{userInfoForm?.description}}
+        {{userInfo?.description}}
       </p>
       <h6>{{'Електронна пошта' | translate}}</h6>
       <p>
