--- a/src/app/modules/home/user-profile/user-posts/post/post-preview/post-preview-component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post-preview/post-preview-component.html
@@ -1,37 +1,26 @@
-<div class="row m-0">
+<div class="row mb-4">
 
   <!-- Post Content Column -->
   <div class="col-lg-12">
-
-    <!-- Title -->
-    <h1 class="mt-4 text-center">{{post.title}}</h1>
-
-    <!-- Author -->
+    <hr>
     <div class="row justify-content-between">
-      <p class="lead mx-auto">
-        by
-        <a href="#">Name</a>
-      </p>
+      <!-- Date/Time -->
+      <p>Posted on January 1, 2019 at 12:00 PM</p>
+      <span style="cursor: pointer" [routerLink]="['/users/me/posts/', id]">
+        <i class="fa fa-share-alt mr-1"></i>
+        <span>Share</span>
+      </span>
     </div>
-
-    <hr>
-    <!-- Date/Time -->
-    <p>Posted on January 1, 2019 at 12:00 PM</p>
-
-    <hr>
-
     <!-- Preview Image -->
-    <img class="img-fluid rounded" style="height: 200px" [src]="post.image" alt="">
-
-    <hr>
-
+    <img class="img-fluid rounded" style="height: 200px" [src]="image" alt="">
     <!-- Post Content -->
-    <p class="lead">{{post.description}}</p>
+    <p class="lead my-2">{{text}}</p>
 
-    <hr>
-
-    <share-button  button="facebook" [icon]="fbIcon" ></share-button>
-    <hr>
-
+    <div class="row d-flex justify-content-end">
+      <button type="button" class="btn btn-primary mr-2">Edit</button>
+      <button type="button" class="btn btn-danger" (click)="deletePost(id)">Delete</button>
+    </div>
   </div>
 </div>
+
+
