--- a/src/app/modules/home/user-profile/user-posts/post/post.component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post.component.html
@@ -1,51 +1,47 @@
-<div class="row">
-
+<div class="row mb-4">
   <!-- Post Content Column -->
   <div class="col-lg-12">
-
-    <!-- Title -->
-    <h1 class="mt-4">{{title}}</h1>
-
-    <!-- Author -->
+    <hr>
     <div class="row justify-content-between">
-      <p class="lead">
-        by
-        <a href="#">Name</a>
+      <!-- Date/Time -->
+      <p>Posted on January 1, 2019 at 12:00 PM</p>
+      <div class="row d-flex justify-content-end">
+        <button [routerLink]="['/users/me/posts/edit', id]" type="button" class="btn btn-primary mr-2">Edit</button>
+        <button type="button" class="btn btn-danger" (click)="deletePost(id)">Delete</button>
+      </div>
+    </div>
+    <!-- Preview Image -->
+    <img class="img-fluid rounded" style="height: 200px;" src="{{image}}" alt="">
+
+    {{image}}
+    <!-- Post Content -->
+    <p class="lead my-2">{{text}}</p>
+
+    <div *ngFor="let comment of comments">
+      <p class="comment">
+        {{comment}}
       </p>
-      <span  style="cursor: pointer" [routerLink]="['/users/me/posts/', id]">
+      <ng-container *ngIf="replyCommentInput">
+        <div class="col-sm-12">
+          <input class="form-control my-3" type="text"  #subComment (keyup.enter)="addSubComment(subComment.value)">
+        </div>
+      </ng-container>
+
+      <p style="cursor: pointer; color: blue" (click)="showSubCommentInput()"><small>reply</small></p>
+    </div>
+    <div class="row">
+      <button mat-button (click)="showCommentInput()">Comment</button>
+      <button mat-button [routerLink]="['/users/me/posts/', id]">
         <i class="fa fa-share-alt mr-1"></i>
         <span>Share</span>
-      </span>
+      </button>
+      <ng-container *ngIf="showedCommentInput">
+          <div class="col-sm-12">
+            <input class="form-control my-3" type="text"  #comment (keyup.enter)="addComment(comment.value)">
+          </div>
+      </ng-container>
+
     </div>
-
-
-    <hr>
-
-    <!-- Date/Time -->
-    <p>Posted on January 1, 2019 at 12:00 PM</p>
-
-    <hr>
-
-    <!-- Preview Image -->
-    <img class="img-fluid rounded" style="height: 200px" [src]="image" alt="">
-
-    <hr>
-
-    <!-- Post Content -->
-    <p class="lead">{{description}}</p>
-
-    <blockquote class="blockquote">
-      <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-      <footer class="blockquote-footer">Someone famous in
-        <cite title="Source Title">Source Title</cite>
-      </footer>
-    </blockquote>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
-
-    <hr>
-
   </div>
 </div>
+
