--- a/src/app/modules/home/user-profile/user-posts/user-posts.component.html
+++ b/src/app/modules/home/user-profile/user-posts/user-posts.component.html
@@ -1,12 +1,40 @@
+<button class="btn btn-success mb-4" (click)="openModal()">Add Post</button>
 <app-post
+  (onPostDeleted) = "postDeleted($event)"
   *ngFor = "let post of posts"
-  [title] = "post.title"
-  [description] = "post.description"
-  [image] = "post.image"
-  [id] = "post.id"
->
 
+>
 </app-post>
+
+<!--[text] = "post.text"-->
+<!--[image] = "post.images[0]"-->
+<!--[id] = "post.id"-->
+
+<ng-template #addPost>
+  <div class="modal-header">
+    <h4 class="modal-title">Modal Title</h4>
+    <button type="button" class="close" aria-label="Close"
+            (click)="activeModal.dismiss('Cross click')">
+    </button>
+  </div>
+  <div class="modal-body">
+    <div>
+      <img [src]="previewUrl || '../../../../../assets/images/default-image.jpg'" class="post-image"/>
+    </div>
+    <div class="form-group">
+      <input type="file" name="image" (change)="fileProgress($event)" />
+    </div>
+    <div class="form-group">
+      <label for="postText" class="my-2">Comment your post</label>
+      <textarea name="" id="postText" class="form-control" [(ngModel)]="postText"></textarea>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-success" (click)="createPost()">
+      Create Post
+    </button>
+  </div>
+</ng-template>
 
 
 
