--- a/src/app/modules/home/user-profile/user-posts/post/post.component.scss
+++ b/src/app/modules/home/user-profile/user-posts/post/post.component.scss
@@ -2,6 +2,7 @@
   background: #e2e2e2;
   border-radius: 20px;
   padding: 10px;
+  word-break: break-word;
 }
 
 .img {
@@ -10,4 +11,11 @@
   width: 100%;
   margin-top: 10px;
 
+}
+
+
+.comment-image {
+  height: 100px;
+  object-fit: cover;
+  width: 100px;
 }
