--- a/src/app/modules/home/user-profile/user-posts/post/post-comments/post-comments.component.scss
+++ b/src/app/modules/home/user-profile/user-posts/post/post-comments/post-comments.component.scss
@@ -1,3 +1,12 @@
-.counter {
+.fadeIn {
+  animation: fadeIn 2s ease-in;
+}
 
+@keyframes fadeIn {
+  0% {
+    opacity:0
+  }
+  100% {
+    opacity:1;
+  }
 }
