--- a/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.html
@@ -11,22 +11,13 @@
     {{image}}
     <!-- Post Content -->
     <p class="lead my-2">{{post.text}}</p>
-    <div *ngFor="let comment of post.comments">
-      <p class="comment my-1">
-        {{comment.text}}
-      </p>
-      <p style="cursor: pointer; color: blue" (click)="showSubCommentInput()"><small>reply</small></p>
 
-      <p *ngFor="let response of comment.responses" class="comment my-1 ml-3">
-        {{response.text}}
-      </p>
-      <ng-container *ngIf="replyCommentInput">
-        <div class="col-sm-12">
-          <input class="form-control my-3" type="text"  #subComment (keyup.enter)="addSubComment(subComment.value, comment._id)">
-        </div>
-      </ng-container>
-      <hr>
-    </div>
+    <app-post-comments
+      [comments]="post.comments"
+      [id] = "post.id"
+    >
+    </app-post-comments>
+
     <div class="row">
       <button mat-button (click)="showCommentInput()">Comment</button>
       <button mat-button [routerLink]="['/users/me/posts/', id]">
@@ -35,10 +26,14 @@
       </button>
       <ng-container *ngIf="showedCommentInput">
         <div class="col-sm-12">
-          <input class="form-control my-3" type="text"  #comment (keyup.enter)="addComment(comment.value)">
+          <span class="counter mt-3 d-block text-right">{{comment.length}}/50</span>
+          <input
+            class="form-control my-3"
+            type="text"
+            [(ngModel)]="comment"
+            (keyup.enter)="addComment()">
         </div>
       </ng-container>
-
     </div>
   </div>
 </div>
