--- a/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.scss
+++ b/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.scss
@@ -10,3 +10,16 @@
   border-radius: 20px;
   padding: 10px;
 }
+
+.fadeIn {
+  animation: fadeIn 2s ease-in;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity:0
+  }
+  100% {
+    opacity:1;
+  }
+}
