--- a/src/app/modules/home/user-profile/user-posts/post/post.component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post.component.html
@@ -41,9 +41,9 @@
           <div class="col-sm-12">
             <input type='file' (change)="onSelectFile($event)">
           </div>
-          <div class="col-sm-12 my-2">
-            <img [src]="url" height="100" *ngIf="url">
-          </div>
+          <!--<div class="col-sm-12 my-2">-->
+            <!--<img [src]="url" height="100" *ngIf="url">-->
+          <!--</div>-->
         </div>
       </ng-container>
     </div>
