--- a/src/app/modules/home/user-profile/user-posts/user-posts.component.html
+++ b/src/app/modules/home/user-profile/user-posts/user-posts.component.html
@@ -12,8 +12,7 @@
 <ng-template #addPost>
   <div class="modal-header">
     <h4 class="modal-title">Modal Title</h4>
-    <button type="button" class="close" aria-label="Close"
-            (click)="activeModal.dismiss('Cross click')">
+    <button type="button" class="close" aria-label="Close">
     </button>
   </div>
   <div class="modal-body">
