--- a/src/app/modules/home/user-profile/user-posts/post/post-comments/post-comment/post-comment.component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post-comments/post-comment/post-comment.component.html
@@ -15,7 +15,7 @@
       class="form-control my-3"
       type="text"
       [(ngModel)]="subComment"
-      (keyup.enter)="addSubComment(comment._id)"
+      (keyup.enter)="addSubComment()"
       maxlength="50"
     >
   </div>
