--- a/src/app/modules/home/user-profile/user-posts/post/post-comments/post-comments.component.scss
+++ b/src/app/modules/home/user-profile/user-posts/post/post-comments/post-comments.component.scss
@@ -10,3 +10,20 @@
     opacity:1;
   }
 }
+
+
+.example-viewport{
+  height: 250px;
+  width: 100%;
+  margin-left: 50px;
+  border: 1px solid saddlebrown;
+  display: flex;
+}
+
+.list{
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+}
+
+
