--- a/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.scss
+++ b/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.scss
@@ -23,3 +23,14 @@
     opacity:1;
   }
 }
+
+.comments-count {
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+//.scroll-container {
+//  height: 840px;
+//  border: 3px solid red;
+//}
