--- a/src/app/modules/home/user-profile/user-posts/post/post-preview/post-preview-component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post-preview/post-preview-component.html
@@ -1,24 +1,19 @@
-<div class="row mb-4">
-
+<div class="row mb-4 post-preview">
   <!-- Post Content Column -->
   <div class="col-lg-12">
     <hr>
     <div class="row justify-content-between">
       <!-- Date/Time -->
       <p>Posted on January 1, 2019 at 12:00 PM</p>
-      <span style="cursor: pointer" [routerLink]="['/users/me/posts/', id]">
-        <i class="fa fa-share-alt mr-1"></i>
-        <span>Share</span>
-      </span>
     </div>
     <!-- Preview Image -->
-    <img class="img-fluid rounded" style="height: 200px" [src]="post.image" alt="">
+    <img class="img-fluid rounded" style="height: 200px" [src]="post.images[0]" alt="">
     <!-- Post Content -->
     <p class="lead my-2">{{post.text}}</p>
-
     <div class="row d-flex justify-content-end">
-      <button type="button" class="btn btn-primary mr-2">Edit</button>
+      <!--<button type="button" class="btn btn-primary mr-2">Edit</button>-->
       <!--<button type="button" class="btn btn-danger" (click)="deletePost(id)">Delete</button>-->
+      <share-button  button="facebook" [icon]="fbIcon" ></share-button>
     </div>
   </div>
 </div>
