--- a/src/app/modules/home/user-profile/user-posts/post/post.component.scss
+++ b/src/app/modules/home/user-profile/user-posts/post/post.component.scss
@@ -5,3 +5,11 @@
   margin-top: 10px;
 }
 
+
+.post-container {
+  border: 3px solid red;
+  width: 100%;
+  height: 840px;
+  overflow: auto;
+  margin-bottom: 10px;
+}
