--- a/src/app/modules/home/user-profile/user-posts/post/post-comments/post-comments.component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post-comments/post-comments.component.html
@@ -1,8 +1,10 @@
-<div *ngFor="let comment of comments" >
-    <app-post-comment
-      [postComment]="comment"
-      [postId]="postId"
-    >
-    </app-post-comment>
+<app-post-comment
+  *ngFor="let comment of comments | slice:0:showedCommentsCount"
+  [postComment]="comment"
+  [postId]="postId"
+>
+</app-post-comment>
 
-</div>
+
+
+
