--- a/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.html
@@ -1,4 +1,4 @@
-<div class="scroll-container">
+<div class="post-container" (scroll)="onScroll($event)">
   <div *ngIf="isPostLoaded" class="row mb-4">
     <!-- Post Content Column -->
     <div class="col-lg-12">
@@ -11,22 +11,17 @@
       <img style="cursor: pointer" class="img" src="{{post.images[0]}}" alt="">
       <!-- Post Content -->
       <p class="lead my-2">{{post.text}}</p>
-
       <hr>
       <div class="comments-count">
         <button mat-button (click)="showComments()">{{showCommentsCount()}} Comments</button>
       </div>
       <hr>
-
       <ng-container *ngIf="isCommentsShown">
-
         <app-post-comments
-          class="fadeIn"
           [comments]="post.comments"
           [id]="post.id"
         >
         </app-post-comments>
-
         <div class="row">
           <button mat-button (click)="showCommentInput()">Comment</button>
           <button mat-button [routerLink]="['/users/me/posts/', post.id]">
@@ -45,8 +40,6 @@
           </ng-container>
         </div>
       </ng-container>
-
     </div>
   </div>
-
 </div>
