--- a/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.scss
+++ b/src/app/modules/home/user-profile/user-posts/post/post-detail/post-detail.component.scss
@@ -11,22 +11,17 @@
   padding: 10px;
 }
 
-.fadeIn {
-  animation: fadeIn 2s ease-in;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity:0
-  }
-  100% {
-    opacity:1;
-  }
-}
-
 .comments-count {
   display: flex;
   justify-content: flex-end;
+}
+
+.post-container {
+  border: 3px solid red;
+  width: 100%;
+  height: auto;
+  overflow: auto;
+  margin-bottom: 10px;
 }
 
 
