--- a/src/app/modules/home/user-profile/user-posts/post/post.component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post.component.html
@@ -1,52 +1,55 @@
-<div class="row mb-4">
-  <!-- Post Content Column -->
-  <div class="col-lg-12">
-    <hr>
-    <div class="row justify-content-between">
-      <!-- Date/Time -->
-      <p>Posted on January 1, 2019 at 12:00 PM</p>
-      <div class="row d-flex justify-content-end">
-        <button [routerLink]="['/users/me/posts/edit', id]" type="button" class="btn btn-primary mr-2">Edit</button>
-        <button type="button" class="btn btn-danger" (click)="deletePost(id)">Delete</button>
+<div class="post-container" (scroll)="onScroll($event)">
+  <div class="row mb-4">
+    <!-- Post Content Column -->
+    <div class="col-lg-12">
+      <hr>
+      <div class="row justify-content-between">
+        <!-- Date/Time -->
+        <p>Posted on January 1, 2019 at 12:00 PM</p>
+        <div class="row d-flex justify-content-end">
+          <button [routerLink]="['/users/me/posts/edit', id]" type="button" class="btn btn-primary mr-2">Edit</button>
+          <button type="button" class="btn btn-danger" (click)="deletePost(id)">Delete</button>
+        </div>
       </div>
-    </div>
-    <!-- Preview Image -->
-    <img [routerLink]="['/users/me/posts/detail/', id]" style="cursor: pointer" class="img" src="{{image}}" alt="">
-    {{image}}
-    <!-- Post Content -->
-    <p class="lead my-2">{{text}}</p>
-    <app-post-comments
-      [comments]="comments"
-      [id] = "id"
-    >
-    </app-post-comments>
-    <div class="row">
-      <button mat-button (click)="showCommentInput()">Comment</button>
-      <button mat-button [routerLink]="['/users/me/posts/', id]">
-        <i class="fa fa-share-alt mr-1"></i>
-        <span>Share</span>
-      </button>
-      <ng-container *ngIf="showedCommentInput">
-        <div class="col-sm-12">
-          <span class="counter mt-3 d-block text-right">{{postComment.length}}/50</span>
-          <input
-            class="form-control mb-2"
-            type="text"
-            [(ngModel)]="postComment"
-            (keyup.enter)="addComment()"
-            maxlength="50"
-          >
-        </div>
-        <div class="row">
+      <!-- Preview Image -->
+      <img [routerLink]="['/users/me/posts/detail/', id]" style="cursor: pointer" class="img" src="{{image}}" alt="">
+      {{image}}
+      <!-- Post Content -->
+      <p class="lead my-2">{{text}}</p>
+      <app-post-comments
+        [comments]="comments"
+        [id] = "id"
+      >
+      </app-post-comments>
+      <div class="row">
+        <button mat-button (click)="showCommentInput()">Comment</button>
+        <button mat-button [routerLink]="['/users/me/posts/', id]">
+          <i class="fa fa-share-alt mr-1"></i>
+          <span>Share</span>
+        </button>
+        <ng-container *ngIf="showedCommentInput">
           <div class="col-sm-12">
-            <input type='file' (change)="onSelectFile($event)">
+            <span class="counter mt-3 d-block text-right">{{postComment.length}}/50</span>
+            <input
+              class="form-control mb-2"
+              type="text"
+              [(ngModel)]="postComment"
+              (keyup.enter)="addComment()"
+              maxlength="50"
+            >
           </div>
-          <!--<div class="col-sm-12 my-2">-->
+          <div class="row">
+            <div class="col-sm-12">
+              <input type='file' (change)="onSelectFile($event)">
+            </div>
+            <!--<div class="col-sm-12 my-2">-->
             <!--<img [src]="url" height="100" *ngIf="url">-->
-          <!--</div>-->
-        </div>
-      </ng-container>
+            <!--</div>-->
+          </div>
+        </ng-container>
+      </div>
     </div>
   </div>
 </div>
+
 
