--- a/src/app/modules/home/user-profile/user-posts/post/post.component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="post-container" (scroll)="onScroll($event)">
+<div class="post-container" detect-scroll (onScroll)="handleScroll($event)" [bottomOffset]="200" [topOffset]="200">
   <div class="row mb-4">
     <!-- Post Content Column -->
     <div class="col-lg-12">
@@ -17,6 +17,7 @@
       <!-- Post Content -->
       <p class="lead my-2">{{text}}</p>
       <app-post-comments
+        [isReachingBottom]="isReachingBottom"
         [comments]="comments"
         [id] = "id"
       >
