--- a/src/app/modules/home/user-profile/user-posts/post/post.component.scss
+++ b/src/app/modules/home/user-profile/user-posts/post/post.component.scss
@@ -6,9 +6,7 @@
 }
 
 
-.post-container {
-  width: 100%;
-  height: 540px;
+.comments-container {
+  height: 300px;
   overflow: auto;
-  margin-bottom: 10px;
 }
