--- a/src/app/modules/home/user-profile/user-posts/post/post.component.html
+++ b/src/app/modules/home/user-profile/user-posts/post/post.component.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="row">
-              <div class="col-sm-12">
+              <div class="col-sm-12 px-4">
                 <input type='file' (change)="onSelectFile($event)">
               </div>
               <div class="col-sm-12 my-2">
