--- a/src/app/modules/home/user-profile/user-posts/user-posts.component.html
+++ b/src/app/modules/home/user-profile/user-posts/user-posts.component.html
@@ -1,38 +1,65 @@
-<button class="btn btn-success mb-4" (click)="openModal()">Add Post</button>
-<app-post
-  *ngFor="let post of posts"
-  (postDeleted)="postDeleted($event)"
-  [image]="post.images[0]"
-  [text]="post.text"
-  [id]="post.id"
-  [comments]="post.comments"
->
-</app-post>
+<div class="row">
+  <div class="col-sm-12 col-md-8">
+    <app-post
+      *ngFor="let post of posts"
+      (postDeleted)="postDeleted($event)"
+      [image]="post.images[0]"
+      [text]="post.text"
+      [id]="post.id"
+      [comments]="post.comments"
+    >
+    </app-post>
+  </div>
+</div>
 
-<ng-template #addPost>
-  <div class="modal-header">
-    <h4 class="modal-title">Modal Title</h4>
-    <button type="button" class="close" aria-label="Close">
-    </button>
-  </div>
-  <div class="modal-body">
-    <div>
-      <img [src]="previewUrl || '../../../../../assets/images/default-image.jpg'" class="post-image"/>
+<div class="row">
+  <div class="container">
+    <div class="col-sm-12 col-md-8">
+      <div>
+        <img [src]="previewUrl || '../../../../../assets/images/default-image.jpg'" class="post-image"/>
+      </div>
+      <div class="form-group">
+        <input type="file" name="image" (change)="fileProgress($event)"/>
+      </div>
+      <div class="form-group">
+        <label for="postText" class="my-2">Comment your post</label>
+        <textarea
+          name=""
+          id="postText"
+          class="form-control"
+          [(ngModel)]="postText"></textarea>
+      </div>
+      <button class="btn btn-success" (click)="createPost()"> Add Post
+      </button>
     </div>
-    <div class="form-group">
-      <input type="file" name="image" (change)="fileProgress($event)"/>
-    </div>
-    <div class="form-group">
-      <label for="postText" class="my-2">Comment your post</label>
-      <textarea name="" id="postText" class="form-control" [(ngModel)]="postText"></textarea>
-    </div>
   </div>
-  <div class="modal-footer">
-    <button class="btn btn-success" (click)="createPost()">
-      Create Post
-    </button>
-  </div>
-</ng-template>
+</div>
+
+
+<!--<ng-template #addPost>-->
+<!--<div class="modal-header">-->
+<!--<h4 class="modal-title">Modal Title</h4>-->
+<!--<button type="button" class="close" aria-label="Close">-->
+<!--</button>-->
+<!--</div>-->
+<!--<div class="modal-body">-->
+<!--<div>-->
+<!--<img [src]="previewUrl || '../../../../../assets/images/default-image.jpg'" class="post-image"/>-->
+<!--</div>-->
+<!--<div class="form-group">-->
+<!--<input type="file" name="image" (change)="fileProgress($event)"/>-->
+<!--</div>-->
+<!--<div class="form-group">-->
+<!--<label for="postText" class="my-2">Comment your post</label>-->
+<!--<textarea name="" id="postText" class="form-control" [(ngModel)]="postText"></textarea>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="modal-footer">-->
+<!--<button class="btn btn-success" (click)="createPost()">-->
+<!--Create Post-->
+<!--</button>-->
+<!--</div>-->
+<!--</ng-template>-->
 
 
 
